Fixed some dark mode issues with prose and popovers

--- a/apps/site-astro/src/styles/global.css
+++ b/apps/site-astro/src/styles/global.css
@@ -83,7 +83,7 @@
 
 @layer utilities {
   .prose-custom {
-    @apply prose prose-slate md:prose-lg prose-headings:tracking-tight prose-p:leading-7 prose-code:before:hidden prose-code:after:hidden;
+    @apply prose prose-slate dark:prose-invert md:prose-lg prose-headings:tracking-tight prose-p:leading-7 prose-code:before:hidden prose-code:after:hidden;
   }
 
   .content-container {
@@ -97,6 +97,10 @@
 
   .prose-custom code:not(pre code) {
     @apply rounded-sm bg-slate-200 px-2 py-1;
+  }
+
+  .dark .prose-custom code:not(pre code) {
+    @apply rounded-sm bg-slate-700 px-2 py-1 text-slate-200;
   }
 
   /* TOFIX Code smell, need to hard code widths for now */
@@ -169,6 +173,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 50;
   }
 
   .pt-popover[data-show] {
@@ -241,5 +246,11 @@
   }
   .zoom-overlay-open .zoom-overlay {
     opacity: 1;
+  }
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
   }
 }
