--- a/apps/site-marketing/src/styles/global.css
+++ b/apps/site-marketing/src/styles/global.css
@@ -184,6 +184,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 50;
   }
 
   .pt-popover[data-show] {
